fix: make page center aligned

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -252,8 +252,8 @@ button[disabled]{
 
 
 .page {
-  margin-bottom: 4rem;
-  padding-top: 2rem;
+  padding-bottom: 8rem;
+  margin-top: 2rem;
   max-width: 320px;
   width: 100%;
 }
@@ -385,7 +385,7 @@ hr {
 }
 
 .fullheight {
-  height: 100%;
+  min-height: 100%;
 }
 
 
